cmd/service-sample/k8s/01-service-sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-sample
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-sample
  template:
    metadata:
      labels:
        app: service-sample
    spec:
      containers:
      - name: service-sample
        image: uhub.service.ucloud.cn/entropypool/service-sample:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: service-sample
  namespace: kube-system
spec:
  ports:
  - name: api
    port: 32759
    targetPort: 32759
  selector:
    app: service-sample
