cmd/service-sample/k8s/02-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: service-example-npool-top-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: service-example
    k8s.kuboard.cn/workload: service-example
    kubernetes.io/ingress.class: "traefik-internet"
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - kind: Rule
    match: Host(`api.npool.top`) && PathPrefix(`/service-example`)
    middlewares:
    - name: strip-service-name-prefix
    services:
    - kind: Service
      name: service-example
      port: api

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: service-example-xpool-top-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: service-example
    k8s.kuboard.cn/workload: service-example
    kubernetes.io/ingress.class: "traefik-internet"
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - kind: Rule
    match: Host(`api.xpool.top`) && PathPrefix(`/service-example`)
    middlewares:
    - name: strip-service-name-prefix
    services:
    - kind: Service
      name: service-example
      port: api

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-service-example-prefix
spec:
  stripPrefix:
    prefixes:
      - /service-example
