cmd/service-sample/k8s/02-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: service-sample-traefik-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: service-sample-traefik
    k8s.kuboard.cn/workload: service-sample-traefik
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-service-sample-prefix@kubernetescrd,kube-system-headers-appid-to-body@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/service-sample
            backend:
              serviceName: service-sample
              servicePort: 32759
    - host: api.xpool.top
      http: *http_rules
    - host: www.npool.top
      http: *http_rules
    - host: www.xpool.top
      http: *http_rules
    - host: dashboard.xpool.top
      http: *http_rules

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-service-sample-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /api/service-sample
