cmd/service-sample/k8s/03-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: service-sample-nginx-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: service-sample-nginx
    k8s.kuboard.cn/workload: service-sample-nginx
    kubernetes.io/ingress.class: "devops-vpn-nginx-internal"
    nginx.com/sticky-cookie-services: "serviceName=kuboard srv_id expires=1h path=/"
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  rules:
    - host: api.internal-devops.development.npool.top
      http: &http_rules
        paths:
          - path: /api/service-sample(/|$)(.*)
            backend:
              serviceName: service-sample
              servicePort: 32759
    - host: api.internal-devops.development.xpool.top
      http: *http_rules
    - host: www.internal-devops.development.npool.top
      http: *http_rules
    - host: www.internal-devops.development.xpool.top
      http: *http_rules
